// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a child even if a caption is provided 1`] = `
.c2 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.1em;
  margin: 0;
  margin-left: 10px;
  border-bottom: 1px solid black;
  cursor: pointer;
  display: inline-block;
  min-width: 7.1em;
  white-space: nowrap;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c1 > p,
.c1 p,
.c1 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.1em;
  color: #999;
  margin: 0;
}

@media (max-width: 600px) {
  .c0 {
    padding: 0px 10px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      Here is a passed child
    </div>
  </div>
  <div
    className="c2"
  >
    View Fullscreen
  </div>
</div>
`;

exports[`renders a saved caption properly 1`] = `
.c2 {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.1em;
  margin: 0;
  margin-left: 10px;
  border-bottom: 1px solid black;
  cursor: pointer;
  display: inline-block;
  min-width: 7.1em;
  white-space: nowrap;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c1 > p,
.c1 p,
.c1 .public-DraftEditorPlaceholder-root {
  font-family: Unica77LLWebMedium ,      'Arial',      'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.1em;
  color: #999;
  margin: 0;
}

@media (max-width: 600px) {
  .c0 {
    padding: 0px 10px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This is a saved caption</p>",
        }
      }
    />
  </div>
  <div
    className="c2"
  >
    View Fullscreen
  </div>
</div>
`;
